Fixed size of intro paragraph on iOS devices.

--- a/content/media/sass/_resume.scss
+++ b/content/media/sass/_resume.scss
@@ -89,8 +89,8 @@ $ninesixty-grid-width: 640px;
     }
 
     .introduction {
-      font-size: 1.3em;
-      line-height: 1.5em;
+      font-size: 18px;
+      line-height: 27px;
     }
 
     #experience {
